--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    html {
+        font-size: 10px;
+    }
+
+    @media screen and (min-width: 576px) {
+        html {
+            font-size: 12px;
+        }
+    }
+
+    @media screen and (min-width: 768px) {
+        html {
+            font-size: 14px;
+        }
+    }
+
+    @media screen and (min-width: 992px) {
+        html {
+            font-size: 16px;
+        }
+    }
+
+    @media screen and (min-width: 1200px) {
+        html {
+            font-size: 16px;
+        }
+    }
+
+    @media screen and (min-width: 1600px) {
+        html {
+            font-size: 18px;
+        }
+    }
+}
+
 body {
     margin: 0;
     -webkit-font-smoothing: antialiased;
